--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,26 @@
+{
+  "name": "budget-planner-frontend",
+  "version": "1.0.0",
+  "private": true,
+  "description": "Frontend for the Budget Planner app built with React and Tailwind CSS.",
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
+    "recharts": "^2.8.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.3",
+    "vite": "^5.0.12",
+    "gh-pages": "^6.0.0"
+  }
+}
 
