--- a/backend/netlify.toml
+++ b/backend/netlify.toml
@@ -1,10 +1,11 @@
 [dev]
-  command = "npm run dev --prefix frontend"
+  command = "npm run dev"
   port = 5173
   targetPort = 5173
-  functions = "backend"
+  functions = "../backend/functions"
+  publish = "dist"
 
 [build]
-  command = "npm run build --prefix frontend"
-  publish = "frontend/dist"
-  functions = "backend"
+  command = "npm run build"
+  publish = "dist"
+  functions = "functions"
